--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,7 @@
 @import './blocks/page.scss';
 @import './blocks/body.scss';
 @import './blocks/content-container.scss';
+@import './blocks/header.scss';
+@import './blocks/logo.scss';
+@import './blocks/main-nav.scss';
+@import './blocks/site-list.scss';
