--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,8 @@
 @import './blocks/logo.scss';
 @import './blocks/main-nav.scss';
 @import './blocks/site-list.scss';
+@import './blocks/index-main.scss';
+@import './blocks/title.scss';
+@import './blocks/promo.scss';
+@import './blocks/promo-img.scss';
+@import './blocks/button.scss';
