--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,3 +20,6 @@
 @import './blocks/promo.scss';
 @import './blocks/promo-img.scss';
 @import './blocks/button.scss';
+@import './blocks/products.scss';
+
+
