делает стилизацию блока контактов

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,3 +25,5 @@
 @import "blocks/demo.scss";
 @import "blocks/demo-option.scss";
 @import "blocks/cat-slider.scss";
+@import "blocks/contacts.scss";
+@import "blocks/location-map.scss";
