--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,3 +27,7 @@
 @import "blocks/cat-slider.scss";
 @import "blocks/contacts.scss";
 @import "blocks/location-map.scss";
+
+@import "blocks/footer.scss";
+@import "blocks/social.scss";
+@import "blocks/copyright.scss";
