--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -5,12 +5,13 @@
 }
 
 .products__item {
-  padding: 24px 33px 18px 20px;
+  padding: 30px 33px 18px 20px;
   background-color: $background-special;
 }
 
 .products__title {
   @include accented-text(24px, 37px);
+  padding-left: 69px;
   margin-bottom: 22px;
   color: $color-basic;
 }
