делает стилизацию второстепенной кнопки

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,4 +6,9 @@
   color: $color-basic-light;
   background-color: $color-accent;
   text-align: center;
+
+  &--accessory {
+    background-color: $background-special;
+    color: $color-special;
+  }
 }
