делает карточки товаров в каталоге

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,7 +27,11 @@
 @import "blocks/cat-slider.scss";
 @import "blocks/contacts.scss";
 @import "blocks/location-map.scss";
-
 @import "blocks/footer.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
+@import "blocks/catalog-main.scss";
+@import "blocks/catalog.scss";
+@import "blocks/product-card.scss";
+@import "blocks/product-detail.scss";
+@import "blocks/more-products.scss";
