--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,11 @@
+.catalog {
+  padding-top: 27px;
+  padding-bottom: 11px
+}
+
 .catalog__wrapper {
-  padding-left: 27px 0 11px 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .catalog__title {
