делает стилизацию блока дополнительных товаров

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -35,3 +35,6 @@
 @import "blocks/product-card.scss";
 @import "blocks/product-detail.scss";
 @import "blocks/more-products.scss";
+@import "blocks/add-products.scss";
+@import "blocks/add-product.scss";
+@import "blocks/catalog-gift.scss";
