--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,3 +38,10 @@
 @import "blocks/add-products.scss";
 @import "blocks/add-product.scss";
 @import "blocks/catalog-gift.scss";
+@import "blocks/form-main.scss";
+@import "blocks/program-selection.scss";
+@import "blocks/form-info.scss";
+@import "blocks/form-goal.scss";
+@import "blocks/form-contacts.scss";
+@import "blocks/form-comment.scss";
+@import "blocks/form-add.scss";
