--- a/source/sass/blocks/more-products.scss
+++ b/source/sass/blocks/more-products.scss
@@ -4,7 +4,7 @@
 
 .more-products__title {
   @include accented-text;
-  color: lighten($color-basic, 6.5%);
+  color: #111111;
   margin-bottom: 8px;
 }
 
