--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,5 +1,6 @@
 .product-card {
-  padding: 11px 20px 14px 20px;
+  padding-top: 11px;
+  padding-bottom: 14px;
 
   &--show-more {
     padding-top: 70px;
