--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,3 +5,6 @@ $color-basic-light: #ffffff;
 $color-special: #444444;
 $background-special: #f2f2f2;
 $color-accent: #68b738;
+$tablet-width: 768px;
+$desktop-width: 1440px;
+$mobile-width-only: 767px;
