--- a/source/sass/blocks/content-container.scss
+++ b/source/sass/blocks/content-container.scss
@@ -3,4 +3,16 @@
   width: 320px;
   padding: 0 20px 0 20px;
   margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: $tablet-width;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: $desktop-width;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
 }
