--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,4 +1,7 @@
 .header__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding-top: 10px;
   padding-bottom: 17px;
 }
