--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,28 +1,74 @@
 .products__list {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   row-gap: 20px;
+
+  @media (min-width: $tablet-width) {
+    row-gap: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+    column-gap: 80px;
+  }
 }
 
 .products__item {
+  flex-basis: 50%;
   padding: 30px 33px 18px 20px;
   background-color: $background-special;
+
+  @media (min-width: $tablet-width) {
+    padding: 77px 316px 53px 52px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 77px 61px 55px 52px;
+  }
 }
 
 .products__title {
   @include accented-text(24px, 37px);
   padding-left: 69px;
-  margin-bottom: 22px;
+  margin-bottom: 29px;
   color: $color-basic;
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    padding-left: 0;
+    margin-bottom: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 162px;
+    margin-bottom: 73px;
+  }
 }
 
 .products__subtitle {
   @include main-text;
   margin-bottom: 38px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 48px;
+    color: $color-basic;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 23px;
+  }
 }
 
 .products__link {
   @include accented-text(16px, 16px);
   padding: 4px 47px 4px 0;
   color: $color-basic;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
