делает сетку футера

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,3 +1,14 @@
+.copyright {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media (min-width: $tablet-width) {
+    justify-content: flex-end;
+    column-gap: 28px;
+  }
+}
+
 .copyright__text {
   @include main-text(16px, 19px);
 }
