--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,8 +1,26 @@
+.social {
+  @media (max-width: $mobile-width-only) {
+    box-sizing: border-box;
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-top: 8px;
+    padding-bottom: 7px;
+  }
+}
+
 .social__list {
   display: flex;
+  column-gap: 24px;
+  justify-content: center;
 }
 
 .social__link {
+  display: block;
   width: 28px;
   height: 22px;
+  /*временный бордер*/
+  border: 1px solid $color-basic;
 }
