--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,6 +1,8 @@
 .social {
+  padding-top: 19px;
+  padding-bottom: 19px;
+
   @media (max-width: $mobile-width-only) {
-    box-sizing: border-box;
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
   }
