--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,8 +1,47 @@
 .catalog {
   padding-top: 27px;
-  padding-bottom: 11px
 }
 
 .catalog__title {
-  margin-bottom: 49px;
+  margin-bottom: 8px;
+
+  @media (max-width: $mobile-width-only) {
+    width: calc(100% + 40px);
+    padding: 0 20px 48px 20px;
+    margin: 0 -20px;
+    border-bottom: 1px solid #ebebeb;
+    box-sizing: border-box;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 82px;
+  }
+}
+
+.catalog__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    column-gap: 80px;
+    row-gap: 63px;
+  }
+}
+
+.catalog__item {
+  @media (max-width: $mobile-width-only) {
+    width: calc(100% + 40px);
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0 -20px;
+    border-bottom: 1px solid #ebebeb;
+    box-sizing: border-box;
+  }
 }
