--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,21 +1,108 @@
 .product-card {
+  display: flex;
+  flex-wrap: wrap;
   padding-top: 11px;
-  padding-bottom: 14px;
+  padding-bottom: 24px;
 
   &--show-more {
+    flex-direction: column;
+    align-items: center;
     padding-top: 70px;
+  }
+
+  @media (min-width: $tablet-width) {
+    flex-direction: column;
+    width: 324px;
+    padding: 34px 37px 39px 39px;
+    box-sizing: border-box;
+    background-image: linear-gradient(to bottom, $color-basic-light 81px, $background-special 81px);
+
+    &--size-xl {
+      padding-top: 8px;
+    }
+
+    &--show-more {
+      align-self: flex-end;
+      padding-top: 159px;
+      padding-bottom: 37px;
+      border: 2px solid #f2f2f2;
+      background-image: none;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 245px;
+    padding: 28px 38px 40px 39px;
+
+    &--size-xl {
+      padding-top: 0;
+    }
+
+    &--show-more {
+      padding-top: 158px;
+      padding-left: 38px;
+    }
+  }
+}
+
+.product-card__img-link {
+  @media (max-width: $mobile-width-only) {
+    flex-basis: 50%;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 34px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 42px;
   }
 }
 
 .product-card__wrapper-content {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 50%;
+  padding-bottom: 5px;
   margin-bottom: 13px;
+
+  @media (min-width: $tablet-width) {
+    flex-grow: 1;
+    flex-basis: auto;
+    padding-bottom: 0;
+    margin-bottom: 33px;
+  }
 }
 
 .product-card__link {
+  padding-right: 42px;
   margin-bottom: 18px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 40px;
+    padding-left: 40px;
+    margin-bottom: 21px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
 
 .product-card__title {
   @include accented-text;
   color: #222222;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    line-height: 21px;
+  }
 }
+
+.product-card__button {}
