--- a/source/sass/blocks/product-detail.scss
+++ b/source/sass/blocks/product-detail.scss
@@ -1,3 +1,27 @@
 .product-detail {
   @include main-text(12px, 16px);
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 16px;
+  }
+}
+
+.product-detail__item {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 4px;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 9px;
+    border-bottom: 1px solid #cdcdcd;
+
+    &:not(:last-child) {
+      margin-bottom: 5px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 10px;
+  }
 }
