--- a/source/sass/blocks/add-products.scss
+++ b/source/sass/blocks/add-products.scss
@@ -1,8 +1,3 @@
-.add-products {
-  padding-top: 25px;
-  padding-bottom: 35px;
-}
-
 .add-products__title {
   font-family: $oswald;
   font-style: normal;
@@ -11,8 +6,48 @@
   line-height: 24px;
   color: $color-basic;
   margin-bottom: 36px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 80px;
+  }
+}
+
+.add-products__wrapper {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    column-gap: 79px;
+  }
 }
 
 .add-products__list {
+  border-top: 1px solid #cdcdcd;
+  border-bottom: 1px solid #cdcdcd;
   margin-bottom: 35px;
+
+  @media (min-width: $tablet-width) and (max-width: 1439px) {
+    border: 1px solid #cdcdcd;
+    margin-bottom: 69px;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-basis: 91%;
+    margin-bottom: 0;
+  }
+}
+
+.add-products__gift {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  @media (min-width: $tablet-width) and (max-width: 1439px) {
+    flex-direction: row;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-basis: 25%;
+  }
 }
