--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -6,7 +6,8 @@
   line-height: 36px;
   color: $color-basic;
 
-  &--light {
-    color: $color-basic-light;
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
   }
 }
