--- a/source/sass/blocks/program-selection.scss
+++ b/source/sass/blocks/program-selection.scss
@@ -1,42 +1,35 @@
 .program-selection {
   padding: 27px 0 32px;
+
+  @media (min-width: $tablet-width) {
+    padding: 44px 37px 72px 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 54px 0 82px 0;
+  }
 }
 
 .program-selection__title {
   margin-bottom: 37px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 54px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 56px;
+  }
 }
 
 .program-selection__desc {
   @include accented-text(14px, 18px);
   color: $color-basic;
   margin-bottom: 39px;
-}
 
-.program-selection__info {
-  margin-bottom: 24px;
-}
-
-.program-selection__goal {
-  margin-bottom: 26px;
-}
-
-.program-selection__contacts {
-  margin-bottom: 24px;
-}
-
-.program-selection__comment {
-  margin-bottom: 23px;
-}
-
-.program-selection__add {
-  margin-bottom: 34px;
-}
-
-.program-selection__button {
-  margin-bottom: 21px;
-}
-
-.program-selection__warning {
-  @include main-text(14px, 16px);
-  color: $color-basic;
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 66px;
+  }
 }
