--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -40,6 +40,7 @@
 @import "blocks/catalog-gift.scss";
 @import "blocks/form-main.scss";
 @import "blocks/program-selection.scss";
+@import "blocks/form.scss";
 @import "blocks/form-info.scss";
 @import "blocks/form-goal.scss";
 @import "blocks/form-contacts.scss";
