добавляет резину на форму

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -34,7 +34,7 @@
   flex-basis: 100%;
 
   @media (min-width: $desktop-width) {
-    flex-basis: 50%;
+    flex: 1 1 calc((100% / 2) - 80px);
   }
 }
 
@@ -54,7 +54,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    flex-basis: 45%;
+    flex: 1 1 calc((100% / 2) - 80px);
   }
 }
 
