--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -12,7 +12,7 @@
 
   @media (min-width: $tablet-width) {
     flex-direction: column;
-    width: 324px;
+    min-width: 324px;
     padding: 34px 37px 39px 39px;
     box-sizing: border-box;
     background-image: linear-gradient(to bottom, $color-basic-light 81px, $background-special 81px);
@@ -22,7 +22,7 @@
     }
 
     &--show-more {
-      align-self: flex-end;
+      align-self: end;
       padding-top: 159px;
       padding-bottom: 37px;
       border: 2px solid #f2f2f2;
@@ -33,8 +33,6 @@
   @media (min-width: $desktop-width) {
     min-width: 245px;
     padding: 28px 38px 40px 39px;
-    flex-grow: 1;
-    flex-basis: 20%;
 
     &--size-xl {
       padding-top: 0;
@@ -107,4 +105,8 @@
   }
 }
 
-.product-card__button {}
+.product-card__detail {
+  @media (min-width: $tablet-width) {
+    margin-top: auto;
+  }
+}
