--- a/source/sass/blocks/content-container.scss
+++ b/source/sass/blocks/content-container.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
 
   @media (min-width: $tablet-width) {
-    width: $tablet-width;
+    min-width: $tablet-width;
     padding-left: 30px;
     padding-right: 30px;
   }
