--- a/source/sass/blocks/demo-option.scss
+++ b/source/sass/blocks/demo-option.scss
@@ -1,18 +1,95 @@
-.demo-option__item {
-  width: 124px;
+.demo-option {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 32px;
+  row-gap: 34px;
+
+  @media (min-width: $tablet-width) {
+    column-gap: 42px;
+  }
+
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    grid-template-columns: 1fr 1fr 2fr;
+  }
+
+  @media (min-width: $desktop-width) {
+    row-gap: 60px;
+    margin-right: 66px;
+  }
+}
+
+.demo-option__feature {
+  height: 56px;
+  padding: 14px 7px 17px 7px;
+  border: 1px solid #cdcdcd;
+  border-radius: 3px;
+  box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    min-width: 162px;
+    height: 72px;
+    padding-top: 15px;
+    padding-bottom: 20px;
+  }
 }
 
 .demo-option__value {
   @include accented-text(24px, 24px);
   color: $color-basic;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+  }
 }
 
 .demo-option__desc {
   @include main-text(12px, 12px);
   text-transform: lowercase;
+  background-color: #eaeaea;
+  text-align: center;
+  width: 70px;
+  padding-left: 9px;
+  padding-right: 9px;
+  position: relative;
+  top: 8px;
+  left: 50%;
+  transform: translate(-50%);
+
+  @media (min-width: $tablet-width) {
+    font-size: 14px;
+    line-height: 14px;
+    display: inline-block;
+    width: auto;
+  }
+
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    background-color: $color-basic-light;
+  }
 }
 
 .demo-option__results {
   @include accented-text(14px, 20px);
   color: $color-basic;
+  grid-column: 1 / 3;
+  display: flex;
+  justify-content: center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    grid-column: 3 / 4;
+    flex-direction: column;
+    align-items: flex-end;
+    row-gap: 9px;
+  }
+
+  @media (min-width: $desktop-width) {
+    justify-content: start;
+    column-gap: 63px;
+  }
 }
