--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,5 +1,5 @@
-$lato: "Lato", "Arial", sans-serif;
-$oswald: "Oswald", "Arial", sans-serif;
+$lato: "Lato", sans-serif;
+$oswald: "Oswald", sans-serif;
 $color-basic: #000000;
 $color-basic-light: #ffffff;
 $color-special: #444444;
