--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,16 +1,58 @@
+.promo {
+  position: relative;
+
+  @media (max-width: $mobile-width-only) {
+    &::before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 302px;
+      left: 0;
+      background-color: #62A53A;
+      background-image: url(../../img/decorative/promo-background-mob@1x.jpg);
+      background-size: cover;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url(../../img/decorative/promo-background-mob@2x.jpg);
+      }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    position: static;
+
+    &::before {
+      position: absolute;
+      content: "";
+      width: 50%;
+      height: 694px;
+      right: 0;
+      top: 0;
+      background-color: #62A53A;
+      background-image: url(../../img/decorative/promo-background-desk@1x.jpg);
+      background-size: cover;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url(../../img/decorative/promo-background-desk@2x.jpg);
+      }
+    }
+  }
+}
+
 .promo__container {
   display: grid;
   grid-template-columns: 1fr;
   padding-top: 27px;
+  position: relative;
+  z-index: 2;
 
   @media (min-width: $tablet-width) {
     grid-template-rows: auto auto auto 1fr;
   }
 
   @media (min-width: $desktop-width) {
-    padding-left: 190px;
     margin-bottom: 136px;
-    grid-template-columns: 420px 1fr;
+    grid-template-columns: 570px 1fr;
   }
 }
 
@@ -23,7 +65,27 @@
   }
 
   @media (min-width: $tablet-width) {
+    margin-left: 88px;
     margin-bottom: 41px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 80px;
+  }
+}
+
+.promo__slogan-container {
+  grid-area: 2 / 1 / 3 / -1;
+  margin-bottom: 29px;
+
+  @media (min-width: $tablet-width) {
+    margin-left: 88px;
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 80px;
+    margin-bottom: 52px;
   }
 }
 
@@ -31,22 +93,16 @@
   @include accented-text(14px, 14px);
   color: $color-basic-light;
   text-align: center;
-  margin-bottom: 29px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 20px;
     color: $color-basic;
     text-align: left;
-    margin-bottom: 20px;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-bottom: 52px;
   }
 }
 
-.promo__img {
+.promo__img-wrapper {
   @media (min-width: $tablet-width) {
     grid-area: 3 / 1 / 5 / 2;
   }
@@ -54,6 +110,22 @@
   @media (min-width: $desktop-width) {
     grid-area: 1 / 2 / 5 / 3;
     margin-left: -46px;
+  }
+}
+
+.promo__img {
+  object-fit: contain;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 708px;
+    height: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 552px;
+    height: 499px;
+    margin: 0 0;
   }
 }
 
@@ -66,8 +138,13 @@
     line-height: 20px;
   }
 
-  @media (min-width: $tablet-width) and (max-width: 1439px) {
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
     grid-area: 3 / 1 / 4 / 2;
     margin-top: 29px;
+    margin-left: 88px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 80px;
   }
 }
