--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,11 +1,11 @@
 .button {
   @include accented-text(16px, 20px);
   width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px;
   color: $color-basic-light;
   background-color: $color-accent;
   text-align: center;
+  box-sizing: border-box;
 
   &--accessory {
     background-color: $background-special;
