--- a/source/sass/blocks/index-main.scss
+++ b/source/sass/blocks/index-main.scss
@@ -1,5 +1,9 @@
 .index-main__promo {
   margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+  }
 }
 
 .index-main__products {
