--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,10 +1,96 @@
 .main-nav__toggle {
+  position: absolute;
+  top: 22px;
+  right: 20px;
   width: 24px;
-  height: 16px;
-  //временный бордер
-  border: 1px solid $color-basic;
+  height: 18px;
+  z-index: 2;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: $color-basic;
+  }
+
+  &::before {
+    top: 0;
+  }
+
+  &::after {
+    bottom: 0;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
 
   @media (min-width: $tablet-width) {
     display: none;
+  }
+}
+
+.main-nav--closed .main-nav__toggle-icon {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  height: 2px;
+  background-color: $color-basic;
+}
+
+@media (max-width: $mobile-width-only) {
+  .main-nav--closed .main-nav__list {
+    display: none;
+  }
+}
+
+.main-nav--opened .main-nav__toggle::before {
+  transform: rotate(45deg);
+  top: 8px;
+}
+
+.main-nav--opened .main-nav__toggle::after {
+  transform: rotate(-45deg);
+  bottom: 8px;
+}
+
+.main-nav--opened .main-nav__list {
+  position: absolute;
+  top: 65px;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  background-color: $color-basic-light;
+
+  @media (min-width: $tablet-width) {
+    position: static;
+    background-color: inherit;
+  }
+}
+
+.main-nav--opened .main-nav__link {
+  width: 100%;
+  margin: 0;
+}
+
+.main-nav--opened .main-nav__toggle-icon {
+  display: none;
+}
+
+.main-nav--nojs .main-nav__toggle {
+  display: none;
+}
+
+.main-nav--nojs .main-nav__list {
+  @media (max-width: $mobile-width-only) {
+    position: static;
+    display: block;
+    margin: 0 -20px;
+    overflow: hidden;
   }
 }
