--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -51,7 +51,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 136px;
+    padding-top: 0;
+    margin-bottom: 135px;
     grid-template-columns: 570px 1fr;
   }
 }
@@ -70,7 +71,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 80px;
+    margin: 82px 0 40px 80px;
   }
 }
 
@@ -79,11 +80,12 @@
   margin-bottom: 29px;
 
   @media (min-width: $tablet-width) {
-    margin-left: 88px;
+    margin-left: 90px;
     margin-bottom: 20px;
   }
 
   @media (min-width: $desktop-width) {
+    grid-area: 2 / 1 / 3 / 2;
     margin-left: 80px;
     margin-bottom: 52px;
   }
@@ -103,13 +105,16 @@
 }
 
 .promo__img-wrapper {
+  margin-bottom: 3px;
+
   @media (min-width: $tablet-width) {
     grid-area: 3 / 1 / 5 / 2;
+    margin-bottom: 1px;
   }
 
   @media (min-width: $desktop-width) {
     grid-area: 1 / 2 / 5 / 3;
-    margin-left: -46px;
+    margin-left: -122px;
   }
 }
 
@@ -130,18 +135,22 @@
 }
 
 .promo__button {
+  font-size: 14px;
+  line-height: 18px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+
   @media (min-width: $tablet-width) {
-    width: 244px;
-    padding: 14px 26px;
-    box-sizing: border-box;
     font-size: 20px;
     line-height: 20px;
+    width: 244px;
+    padding: 17px 26px;
+    margin-left: 91px;
   }
 
   @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
     grid-area: 3 / 1 / 4 / 2;
     margin-top: 29px;
-    margin-left: 88px;
   }
 
   @media (min-width: $desktop-width) {
