--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,19 +1,35 @@
 .site-list {
-  display: none;
-  position: relative;
-  z-index: 2;
+  @media (max-width: $mobile-width-only) {
+    border-bottom: 1px solid #e6e6e6;
+  }
 
   @media (min-width: $tablet-width) {
     display: flex;
-    justify-content: end;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     column-gap: 35px;
+  }
+
+  @media (min-width: $desktop-width) {
+    justify-content: flex-end;
+  }
+}
+
+.site-list__item {
+  @media (min-width: $tablet-width) {
+    padding-bottom: 3px;
+
+    &--index {
+      padding-bottom: 0;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 5px;
   }
 }
 
 .site-list__link {
-  width: 100%;
-  padding-top: 22px;
-  padding-bottom: 24px;
   font-family: $oswald;
   font-style: normal;
   font-weight: 500;
@@ -21,17 +37,50 @@
   line-height: 20px;
   text-transform: uppercase;
   color: $color-basic;
-  text-align: center;
+
+  @media (max-width: $mobile-width-only) {
+    width: calc(100% + 40px);
+    margin: 0 -20px;
+    padding: 22px 20px 23px 20px;
+    border-top: 1px solid #e6e6e6;
+    box-sizing: border-box;
+    text-align: center;
+  }
 
   @media (min-width: $tablet-width) {
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+
+    &--active {
+      border-bottom: 2px solid $color-accent;
+    }
   }
 
   @media (min-width: $desktop-width) {
     font-size: 20px;
     line-height: 30px;
+    color: #111111;
+    padding-top: 8px;
+    padding-bottom: 6px;
+  }
+}
+
+.site-list__item--index .site-list__link {
+  @media (min-width: $tablet-width) {
+    padding-top: 10px;
+    padding-bottom: 8px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 8px;
+    padding-bottom: 6px;
     color: $color-basic-light;
+
+    &--active {
+      border-color: $color-basic-light;
+    }
   }
 }
