--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -4,18 +4,36 @@
   }
 }
 
+.contacts__wrapper {
+  padding-left: 0;
+  padding-right: 0;
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 47% auto;
+    grid-template-rows: 95px auto 107px;
+  }
+}
+
 .contacts__content {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  padding: 26px 0;
+  column-gap: 30px;
+  row-gap: 20px;
+  padding: 26px 20px;
 
   @media (min-width: $tablet-width) {
-    padding: 56px 40px;
+    padding: 56px 70px;
   }
 
   @media (min-width: $desktop-width) {
     padding-left: 80px;
-    padding-right: 60px;
+    padding-right: 80px;
+    margin-left: 110px;
+    background-color: $color-basic-light;
+    grid-area: 2 / 1 /3 /2;
+    z-index: 2;
   }
 }
 
@@ -26,6 +44,10 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 26px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 4px;
   }
 }
 
@@ -47,5 +69,11 @@
 
   @media (min-width: $tablet-width) {
     margin-top: 19px;
+  }
+}
+
+.contacts__map {
+  @media (min-width: $desktop-width) {
+    grid-area: 1 / 1 /-1 /-1;
   }
 }
