--- a/source/sass/blocks/program-selection.scss
+++ b/source/sass/blocks/program-selection.scss
@@ -2,11 +2,11 @@
   padding: 27px 0 32px;
 
   @media (min-width: $tablet-width) {
-    padding: 44px 37px 72px 40px;
+    padding: 44px 0 72px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 54px 0 82px 0;
+    padding: 54px 0 82px;
   }
 }
 
