--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -17,6 +17,7 @@
 
 .site-list__item {
   @media (min-width: $tablet-width) {
+    padding-top: 3px;
     padding-bottom: 3px;
 
     &--index {
@@ -30,6 +31,7 @@
 }
 
 .site-list__link {
+  @include status-primary;
   font-family: $oswald;
   font-style: normal;
   font-weight: 500;
