--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -37,5 +37,28 @@
 }
 
 @mixin input-basic {
-  border: 1px solid #e7e7e7;
+  outline: 1px solid #e7e7e7;
+
+  &:hover {
+    outline-color: #cdcdcd;
+  }
+
+  &:focus {
+    outline: 2px solid $color-special;
+  }
+
+  &--error {
+    outline: 2px solid $color-error;
+  }
+}
+
+@mixin status-primary {
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+    outline: none;
+  }
 }
