--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,6 +5,7 @@ $color-basic-light: #ffffff;
 $color-special: #444444;
 $background-special: #f2f2f2;
 $color-accent: #68b738;
+$color-error: #ff8282;
 $mobile-width-only: 767px;
 $tablet-width: 768px;
 $tablet-width-only: 1439px;
