вносит правки согласно критериям

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -28,7 +28,7 @@
       height: 694px;
       right: 0;
       top: 0;
-      background-color: #62A53A;
+      background-color: #62a53a;
       background-image: url(../../img/decorative/promo-background-desk@1x.jpg);
       background-size: cover;
 
