--- a/source/sass/blocks/catalog-gift.scss
+++ b/source/sass/blocks/catalog-gift.scss
@@ -4,7 +4,7 @@
   padding-top: 59px;
   padding-bottom: 43px;
   box-sizing: border-box;
-  background-color: #62A53A;
+  background-color: #62a53a;
   background-image: url(../../img/decorative/background-gift@1x.jpg);
   background-size: cover;
   background-position: center;
