--- a/source/sass/blocks/cat-slider.scss
+++ b/source/sass/blocks/cat-slider.scss
@@ -1,7 +1,92 @@
 .cat-slider {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 280px;
+  height: 256px;
+  position: relative;
+
   @media (min-width: $tablet-width) {
     width: 560px;
     height: 512px;
-    background-color: rgba(255, 255, 0, 0.1);
+  }
+}
+
+.cat-slider__img {
+  &--pro {
+    clip-path: polygon(0 0, 50% 0, 50% 100%, 0% 100%);
+  }
+
+  &--slim {
+    clip-path: polygon(50% 1%, 100% 0, 100% 100%, 50% 100%);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+  }
+
+  @media (min-width: $tablet-width) {
+    &--pro {
+      clip-path: polygon(0 0, 55% 0, 55% 100%, 0% 100%);
+    }
+
+    &--slim {
+      clip-path: polygon(54% 1%, 100% 0, 100% 100%, 54% 100%);
+    }
+  }
+}
+
+.cat-slider__button-wrapper {
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 4px;
+  height: 100%;
+  background: var(--color, #666666);
+
+  &:hover {
+    --color: #68b738;
+  }
+
+  &:active {
+    --color: #5eaa2f;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-left: 20px;
+  }
+}
+
+
+.cat-slider__button {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background-color: $color-basic-light;
+  border: 2px solid var(--color, #666666);
+  border-radius: 50%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  &:hover {
+    --color: #68b738;
+  }
+
+  &:active {
+    --color: #5eaa2f;
+  }
+
+  &::after {
+    display: block;
+    content: "";
+    width: 24px;
+    height: 18px;
+    margin: 0 auto;
+    mask-image: url("../../icons/slider-arrow.svg");
+    mask-repeat: no-repeat;
+    mask-position: center;
+    background: var(--color, #666666);
   }
 }
