--- a/source/sass/blocks/content-container.scss
+++ b/source/sass/blocks/content-container.scss
@@ -13,7 +13,8 @@
     padding-left: 30px;
     padding-right: 30px;
 
-    &--default {
+    &--default,
+    &--default-tab {
       padding: 0;
     }
 
