--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,18 +1,18 @@
 .contacts {
+  background-color: $color-basic-light;
+
   &--dark-theme {
     background-color: $background-special;
   }
-}
 
-.contacts__wrapper {
   @media (min-width: $desktop-width) {
     display: grid;
-    grid-template-columns: 47% auto;
+    grid-template-columns: 110px 565px auto;
     grid-template-rows: 95px auto 107px;
   }
 }
 
-.contacts__content {
+.contacts__wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -25,12 +25,12 @@
   }
 
   @media (min-width: $desktop-width) {
+    max-width: 405px;
     padding-left: 80px;
     padding-right: 80px;
-    margin-left: 110px;
     background-color: $color-basic-light;
-    grid-area: 2 / 1 /3 /2;
     z-index: 2;
+    grid-area: 2 / 2 / 3 / 3;
   }
 }
 
@@ -41,9 +41,6 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 26px;
-  }
-
-  @media (min-width: $desktop-width) {
     margin-top: 4px;
   }
 }
