--- a/source/sass/blocks/feature.scss
+++ b/source/sass/blocks/feature.scss
@@ -10,7 +10,7 @@
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
-    margin-bottom: 72px;
+    margin-bottom: 32px;
   }
 }
 
@@ -19,11 +19,12 @@
   flex-wrap: wrap;
   flex-direction: column;
   row-gap: 20px;
+  counter-reset: feature 0;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
     column-gap: 136px;
-    row-gap: 134px;
+    row-gap: 37px;
   }
 
   @media (min-width: $desktop-width) {
@@ -35,12 +36,38 @@
   display: flex;
   column-gap: 20px;
   align-items: center;
+  position: relative;
+  counter-increment: feature 1;
+
+  &::after {
+    content: counter(feature);
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
+    font-family: $oswald;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 280px;
+    line-height: 280px;
+    color: $background-special;
+
+    @media (max-width: $mobile-width-only) {
+      content: none;
+    }
+  }
+
+  &--first::after {
+    right: 22px;
+  }
 
   @media (min-width: $tablet-width) {
     flex-direction: column;
-    row-gap: 31px;
     align-items: flex-start;
+    row-gap: 31px;
     flex-basis: 35%;
+    padding-top: 40px;
+    padding-bottom: 57px;
   }
 
   @media (min-width: $desktop-width) {
