исправляет ошибки после линтера

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -8,7 +8,7 @@
       width: 100%;
       height: 302px;
       left: 0;
-      background-color: #62A53A;
+      background-color: #62a53a;
       background-image: url(../../img/decorative/promo-background-mob@1x.jpg);
       background-size: cover;
 
